<resources>
    <string name="app_name">Sample</string>
    <string name="action_settings">Settings</string>
    <string name="username">User Id</string>
    <string name="access_token">Access Token</string>
    <string name="user_details">User details</string>
    <string name="submit">Submit</string>
    <string name="feed_details">Feed details</string>
    <string name="feed_id">Feed Id</string>
    <string name="like">Like</string>
    <string name="feed_author_id">Feed Author Id</string>
    <string name="notification_id">Notification Id</string>
    <string name="notification_details">Notification Details</string>
    <string name="upload_image_video">Upload Image/Video</string>
    <string name="challenge_details">Challenge Details</string>
    <string name="challenge_id">Challenge Id</string>
</resources>
